# to-be-a-better-pragrammer

./: .gitignore  README.md  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  python.md  计算机系统.md  计算机网络.md  资源.md
.github/workflows/: deploy.yml
.obsidian/: community-plugins.json  daily-notes.json  workspace.json
collections/: README.md  bookmarks_2022_12_3.html  bookmarks_2023_11_17.html  bookmarks_2023_7_27.html
collections/resources/practice/httpie/: Cargo.toml
computer/: 程序是怎么运行的.md
demos/szzj-antd-form/: .fatherrc.ts  .npmignore  .prettierignore  .prettierrc  .umirc.js  README.md  jest.config.js  package.json  setup.js  tsconfig.json
demos/szzj-hooks/: .eslintrc.js  .fatherrc.ts  .gitignore  .lintstagedrc.js  .npmignore  .prettierrc.js  .stylelintignore  .stylelintrc.js  .umirc.js  README.md  package.json  tsconfig.json
demos/szzj-umi-plugins/: .dumirc.ts  .gitignore  .npmrc  README.md  lerna.json  package.json  tsconfig.json
docs/: README.md  config.js  index.md
docs/.obsidian/: community-plugins.json  graph.json  hotkeys.json  workspace
docs/.vitepress/: config.ts
docs/.vuepress/: config.js
docs/anki/: anki.md  面向对象.md
docs/backend/: mysql.md  rust.md
docs/books/: 中央帝国的财政密码.md  人人都是产品经理.md  人地之间.md  人月神话.md  代码整洁之道.md  大国大城.md  学习之道.md  日本经济.md  模型思维.md  社会心理学.md  程序员超强大脑.md  穿越百年中东.md  经济学的思维方式.md  (+5 more)
frontendmaster/: babel.md  css.md  git.md  hooks.md  js.md  koa.md  npmjs.md  react.md  react技术揭秘.md  redux.md  tailwindcss.md  typescript.md
others/: thinking.md  知识体系.md  资源.md
possibility/: README.md
todos/: week.md
(+715 files in other folders)
