[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "3", features = ["derive"] }        #命令行解释
colored = "2.0.4"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.11.19", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
